<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_pantalla"
    tools:context=".iu.Inicio.RegistroActivity">

    <ImageView
        android:id="@+id/Registro"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/Registro_llCamposRellenar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/Registro_llCamposRellenar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/REgistro_btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro">

        <EditText
            android:id="@+id/Registro_et_nom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/edit_text_inicio"
            android:ems="10"
            android:hint="@string/Escribe_tu_nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/item_letra_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Registro_et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/edit_text_inicio"
            android:ems="10"
            android:hint="@string/Escribe_tu_correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/item_letra_bottom" />

        <EditText
            android:id="@+id/Registro_et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/edit_text_inicio"
            android:ems="10"
            android:hint="@string/Escribe_tu_contraseña"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/item_letra_bottom" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/REgistro_btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/color_botones"
        android:padding="16dp"
        android:text="@string/Registrarse"
        android:textColor="@color/color_letra_botones"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro_llCamposRellenar" />

</androidx.constraintlayout.widget.ConstraintLayout>