<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_pantalla"
    tools:context=".iu.Inicio.IniciarSesionActivity">

    <ImageView
        android:id="@+id/IniciarSesion_ivLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/IniciarSesion_llCamposRellenar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/IniciarSesion_llCamposRellenar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/IniciarSesion_btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSesion_ivLogo">

        <EditText
            android:id="@+id/IniciarSesion_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_inicio"
            android:ems="10"
            android:hint="@string/Escribe_tu_correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/item_letra_bottom" />

        <EditText
            android:id="@+id/IniciarSesion_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/edit_text_inicio"
            android:ems="10"
            android:hint="@string/Escribe_tu_contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/item_letra_bottom" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/IniciarSesion_btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color_botones"
        android:padding="16dp"
        android:text="@string/Entra"
        android:textColor="@color/color_letra_botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSesion_llCamposRellenar" />


</androidx.constraintlayout.widget.ConstraintLayout>