<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_pantalla"
    tools:context=".iu.PagPrincipal.info.InformacionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/informacion_btnCierresesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:backgroundTint="@color/color_botones"
                android:text="@string/CerrarSesion"
                android:textColor="@color/color_letra_botones" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/informacion_cvWhyapp"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginVertical="25dp"
            app:cardBackgroundColor="@color/letra_bienvenida"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/infor_1CV"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/view_divider" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/informacion_cvWhatispadel"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/letra_bienvenida"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/infor_2CV"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/view_divider" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/informacion_cvWhocreateapp"
            android:layout_marginVertical="25dp"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/letra_bienvenida"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/infor_3CV"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/view_divider" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/informacion_cvRankingURL"
            android:layout_marginVertical="25dp"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="8dp"
            app:cardBackgroundColor="@color/letra_bienvenida"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/infor_4CV"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/view_divider" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>